objects/Automation_Management__c/Automation_Management__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Manage settings for configurable automation - workflow, flows, process, validations.</description>
    <label>Automation Management</label>
</CustomObject>