objects/Automation_Management__c/fields/Apttus_Agreement_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Agreement_Email_Template__c</fullName>
    <label>Apttus Agreement Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>