objects/Automation_Management__c/fields/Customer_Self_Registration_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Self_Registration_Profile_Id__c</fullName>
    <description>Store the id of the default profile for customer community self registration users. TAN-784</description>
    <inlineHelpText>Run this query to get the value: 
select id, name from profile where name =&apos;Tanium Community Login Unknown&apos;</inlineHelpText>
    <label>Customer Self Registration Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>