objects/Automation_Management__c/fields/Default_MSSP_Deal_Desk_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_MSSP_Deal_Desk_Owner__c</fullName>
    <label>Default MSSP Deal Desk Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>