objects/Automation_Management__c/fields/Default_Opp_Reg_Owner_LATAM__c.field-meta.xml
<CustomField>
    <fullName>Default_Opp_Reg_Owner_LATAM__c</fullName>
    <label>Default Opp Reg Owner LATAM</label>
    <length>18</length>
    <type>Text</type>
</CustomField>