objects/Automation_Management__c/fields/EDR_Community_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>EDR_Community_Group_Id__c</fullName>
    <description>Store the Id of the EDR Community Group for use in flow.</description>
    <label>EDR Community Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>