objects/Automation_Management__c/fields/Hardware_Purchase_Request_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Purchase_Request_Queue_Id__c</fullName>
    <description>TAN-908: SFDC Queue Id for new Hardware Purchase Requests. Used by flow to avoid hardcoding the reference.</description>
    <label>Hardware Purchase Request Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>