objects/Automation_Management__c/fields/License_Version__c.field-meta.xml
<CustomField>
    <fullName>License_Version__c</fullName>
    <label>License Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>