objects/Automation_Management__c/fields/No_Reply_Org_Wide_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>No_Reply_Org_Wide_Email_Id__c</fullName>
    <description>TAN-985: Id of the org wide email used in automation.</description>
    <label>No Reply Org Wide Email Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>