objects/Automation_Management__c/fields/Opp_Registration_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Opp_Registration_Approval_Process__c</fullName>
    <description>Must be developer name. HINT: the one with underscores.</description>
    <inlineHelpText>Must be developer name. HINT: the one with underscores.</inlineHelpText>
    <label>Opp Registration Approval Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>