objects/Automation_Management__c/fields/Opp_Registration_Ext_Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Opp_Registration_Ext_Approval_Process__c</fullName>
    <label>Opp Registration Ext Approval Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>