objects/Automation_Management__c/fields/Opportunity_Next_Call_Last_Run_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Next_Call_Last_Run_DateTime__c</fullName>
    <label>Opportunity Next Call Last Run DateTime</label>
    <type>DateTime</type>
</CustomField>