objects/Automation_Management__c/fields/SFDC_Server__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Server__c</fullName>
    <description>Set the SFDC Server URL to enable record links to be created for automation</description>
    <label>SFDC Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>