objects/Automation_Management__c/fields/Taas_Region__c.field-meta.xml
<CustomField>
    <fullName>Taas_Region__c</fullName>
    <label>Taas Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>