objects/Automation_Management__c/fields/Tanium_Endpoint_Management_Group__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Endpoint_Management_Group__c</fullName>
    <label>Tanium Endpoint Management Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>